fixed styling under contact box + added navlink higlight with active class. Also fixed issue with section headers not showing.

--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ body {
 .form-button {
 	margin-top: 20px;
 }
+#Contact {
+	margin-bottom: 40px;
+}
 .footer {
 	text-align: center;
 	background-color: #292b2c !important;
